# pomodoroAKAtimer

./: LICENSE  README.md  bridge.py  index.html  timer.html
.github/workflows/: release.yml
bridge-rs/: Cargo.toml  README.md
bridge-rs/src/: main.rs
bridge-rs/src/backend/: linux.rs  macos.rs  mod.rs  windows.rs
