[package]
name = "timer-bridge"
version = "0.1.2"
edition = "2021"
description = "cross-platform media bridge for the timer ui"
license = "MIT"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0"

# macos: shells out to `nowplaying-cli` (brew install nowplaying-cli).
# no rust deps needed — Command + str parsing is enough.

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Media_Control", "Foundation"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
